# Chatroom

./: .gitignore  CMakeLists.txt  README.md
config/: database.env  server.env  system.env
include/dao/: DaoFactory.h  DatabaseManager.h  MessageDao.h  MySqlMessageDao.h  MySqlRoomDao.h  MySqlUserDao.h  RoomDao.h  SqlDao.h  UserDao.h
include/database/: ConnectionPool.h  DatabaseManager.h  DatabaseManager.inl  ExecuteResult.h  PreparedStatement.h
include/handler/: MessageHandler.h
include/models/: Enums.h  Message.h  Room.h  User.h
include/net/: Connection.h  EpollPoller.h  SocketUtil.H
include/protocol/: ChatProtocol.h  MessageType.h
include/server/: ChatRoomServer.h  Protocol.h
include/service/: AdminService.h  BaseService.h  ChatService.h  ServiceManager.h  UserService.h
include/utils/: EnvLoader.h  PasswordHasher.h  QueryResult.h  ThreadPool.h  TimeUtils.h
scripts/: echo_bench.py  init_database.sql
src/: main.cpp
src/dao/: DaoFactory.cpp  DatabaseManager.cpp  MySqlMessageDao.cpp  MySqlRoomDao.cpp  MySqlUserDao.cpp
src/database/: ConnectionPool.cpp  DatabaseManager.cpp  PreparedStatement.cpp
src/handler/: MessageHandler.cpp
src/net/: Connection.cpp  EpollPoller.cpp  main_epoll.cpp  main_threadpool.cpp
src/server/: ChatRoomServer.cpp  main.cpp
src/service/: AdminService.cpp  BaseService.cpp  ChatService.cpp  ServiceManager.cpp  UserService.cpp
src/threadpool/: ThreadPool.cpp
src/utils/: EnvLoader.cpp  PasswordHasher.cpp  ThreadPool.cpp
